using System.Collections.Generic;

public class Constants {
    public static class Animation {
        public const string HORIZONTAL = "Horizontal";
        public const string VERTICAL = "Vertical";
        public const string IDLE_HORIZONTAL = "Idle_Horizontal";
        public const string IDLE_VERTICAL = "Idle_Vertical";
        public const string COLLECTABLE_ANIMATE = "Animate";
    }

    public static class Tags {
        public const string PLAYER = "Player";
        public const string ENEMY = "Enemy";
        public const string CHEST = "Chest";
        public const string COIN = "Coin";
        public const string DIAMOND = "Diamond";
        public const string HEART = "Heart";
        public const string DESTRUCTABLE = "Destructable";
    }
}